--- a/MultiKinectProcessor/MultiKinectProcessor/DebugWindow.xaml
+++ b/MultiKinectProcessor/MultiKinectProcessor/DebugWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MultiKinectProcessor.MainWindow"
+﻿<Window x:Class="MultiKinectProcessor.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Skeleton Basics" Height="735" Width="760" Loaded="WindowLoaded" Closing="WindowClosing">
@@ -56,7 +56,7 @@
         </Grid.RowDefinitions>
         <DockPanel Grid.Row="0" Margin="0 0 0 20">
             <Image DockPanel.Dock="Left" Source="Images\Logo.png" Stretch="None" Margin="0 10 0 5"/>
-            <TextBlock DockPanel.Dock="Right" Margin="0 0 -1 0" VerticalAlignment="Bottom" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="14" TextAlignment="Right"><Run Text="NASA JPL Multi-Kinect 3D Scene Visualizer"/><LineBreak/><Run FontWeight="bold" FontSize="18" Text="DEBUG CONSOLE" /></TextBlock>
+            <TextBlock DockPanel.Dock="Right" Margin="0,5,-1,1" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="14" TextAlignment="Right"><Run Text="NASA JPL Multi-Kinect 3D Scene Visualizer"/><LineBreak/><Run FontWeight="bold" FontSize="18" Text="DEBUG CONSOLE" /></TextBlock>
             <Image Grid.Column="1" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0 0 0 5"/>
         </DockPanel>
         <Viewbox Grid.Row="1" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top">
@@ -69,18 +69,17 @@
             <Image Name="TopView" Width="360" Height="270"/>
         </Viewbox>
 
-        <TextBox Grid.Row="2" HorizontalAlignment="Right"
+        <RichTextBox Grid.Row="2" HorizontalAlignment="Right"
                  Name="debugTextBox" Margin="5 5 0 0"
                  Width="360" Height="270"
                  HorizontalScrollBarVisibility="Visible"
                  VerticalScrollBarVisibility="Visible"
-                 TextWrapping="Wrap"
-                 TextAlignment="Left"
-                 MaxLength="500"
-                 IsReadOnly="False"
+                 IsReadOnly="True"
                  AcceptsReturn="True" >
-            Debug Console:
-        </TextBox>
+
+        </RichTextBox>
+        
+        
 
         <CheckBox Grid.Row="3" Style="{StaticResource SquareCheckBox}" Content="Seated Mode" Height="Auto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 10 10 10" Name="checkBoxSeatedMode" Checked="CheckBoxSeatedModeChanged" Unchecked="CheckBoxSeatedModeChanged"/>
         <StatusBar Grid.Row="4" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
