--- a/MultiKinectProcessor/MultiKinectProcessor/DebugWindow.xaml
+++ b/MultiKinectProcessor/MultiKinectProcessor/DebugWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MultiKinectProcessor.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Skeleton Basics" Height="735" Width="760" Loaded="WindowLoaded" Closing="WindowClosing">
+        Title="Skeleton Basics" Height="735" Width="900" Loaded="WindowLoaded" Closing="WindowClosing">
 
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
@@ -62,15 +62,15 @@
         <Viewbox Grid.Row="1" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Image Name="SkeletonCanvas" Width="360" Height="270"/>
         </Viewbox>
-        <Viewbox Grid.Row="1" Stretch="None" HorizontalAlignment="Right" VerticalAlignment="Top">
+        <Viewbox Grid.Row="1" Stretch="None" HorizontalAlignment="Left" Margin="365 0 0 0" VerticalAlignment="Top">
             <Image Name="Video" Width="360" Height="270"/>
         </Viewbox>
         <Viewbox Grid.Row="2" Stretch="None"  HorizontalAlignment="Left" Margin="0 5 0 0" VerticalAlignment="Top">
             <Image Name="TopView" Width="360" Height="270"/>
         </Viewbox>
 
-        <RichTextBox Grid.Row="2" HorizontalAlignment="Right"
-                 Name="debugTextBox" Margin="5 5 0 0"
+        <RichTextBox Grid.Row="2" HorizontalAlignment="Left" 
+                 Name="debugTextBox" Margin="365 5 0 0"
                  Width="360" Height="270"
                  HorizontalScrollBarVisibility="Visible"
                  VerticalScrollBarVisibility="Visible"
@@ -85,5 +85,6 @@
                 <TextBlock Name="statusBarText" Margin="-1 0 0 0">Click 'Seated' to change skeletal pipeline type!</TextBlock>
             </StatusBarItem>
         </StatusBar>
+        <Button x:Name="BeginCalibration" Content="Begin Calibration" HorizontalAlignment="Left" Margin="734,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="25" ToolTip="Click here to begin initial calibration seqeunce. This will detect and place all Kinects relative to user position and prepare for 3D Scene Visualization" Focusable="False" FontSize="14" FontWeight="Bold" BorderThickness="1" Click="BeginCalibration_Click"/>
     </Grid>
 </Window>
