--- a/MultiKinectProcessor/MultiKinectProcessor/DebugWindow.xaml
+++ b/MultiKinectProcessor/MultiKinectProcessor/DebugWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MultiKinectProcessor.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Skeleton Basics" Height="735" Width="900" Loaded="WindowLoaded" Closing="WindowClosing">
+        Title="Skeleton Basics" Height="842.675" Width="1000" Loaded="WindowLoaded" Closing="WindowClosing">
 
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
@@ -46,51 +46,72 @@
         </Style>
     </Window.Resources>
 
-    <Grid Name="layoutGrid" Margin="10 0 10 0">
+    <Grid Name="layoutGrid" Margin="10,0,10,6">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="56"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="Auto" MinHeight="290"/>
+            <RowDefinition Height="31"/>
+            <RowDefinition Height="Auto" MinHeight="323"/>
+            <RowDefinition Height="66" />
+            <RowDefinition Height="Auto" MinHeight="10"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row="0" Margin="0 0 0 20">
+        <DockPanel Grid.Row="0" Margin="0,0,0,7">
             <Image DockPanel.Dock="Left" Source="Images\Logo.png" Stretch="None" Margin="0 10 0 5"/>
-            <TextBlock DockPanel.Dock="Right" Margin="0,5,-1,1" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="14" TextAlignment="Right"><Run Text="NASA JPL Multi-Kinect 3D Scene Visualizer"/><LineBreak/><Run FontWeight="bold" FontSize="18" Text="DEBUG CONSOLE" /></TextBlock>
+            <TextBlock DockPanel.Dock="Right" Margin="0,5,-1,1" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="14" TextAlignment="Right"><Run Text="NASA JPL Multi-Kinect 3D Scene Visualizer"/><LineBreak/><Run FontWeight="Bold" FontSize="18" Text="COMMAND CONSOLE"/><LineBreak/><Run FontWeight="Bold" FontSize="18"/></TextBlock>
             <Image Grid.Column="1" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0 0 0 5"/>
         </DockPanel>
-        <Viewbox Grid.Row="1" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Image Name="SkeletonCanvas" Width="360" Height="270"/>
-        </Viewbox>
-        <Viewbox Grid.Row="1" Stretch="None" HorizontalAlignment="Left" Margin="365 0 0 0" VerticalAlignment="Top">
-            <Image Name="Video" Width="360" Height="270"/>
-        </Viewbox>
-        <Viewbox Grid.Row="2" Stretch="None"  HorizontalAlignment="Left" Margin="0 5 0 0" VerticalAlignment="Top">
+        <Viewbox Grid.Row="4" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Height="0" Width="0"/>
+        <Viewbox Grid.Row="4" Stretch="None" HorizontalAlignment="Left" Margin="365 0 0 0" VerticalAlignment="Top" Height="0" Width="0"/>
+        <Viewbox Grid.Row="2" Stretch="None"  HorizontalAlignment="Left" Margin="0 5 0 0" VerticalAlignment="Top" Height="270" Width="360">
             <Image Name="TopView" Width="360" Height="270"/>
         </Viewbox>
 
-        <RichTextBox Grid.Row="2" HorizontalAlignment="Left" 
-                 Name="debugTextBox" Margin="365 5 0 0"
-                 Width="360" Height="270"
-                 HorizontalScrollBarVisibility="Visible"
+        <RichTextBox Grid.Row="2" 
+                 Name="debugTextBox" Margin="365,5,0,0"                 HorizontalScrollBarVisibility="Visible"
                  VerticalScrollBarVisibility="Visible"
                  IsReadOnly="True"
-                 AcceptsReturn="True"></RichTextBox>
-        
-        
+                 AcceptsReturn="True" TextChanged="debugTextBox_TextChanged" HorizontalAlignment="Left" Width="360" Height="270" VerticalAlignment="Top"/>
 
-        <CheckBox Grid.Row="3" Style="{StaticResource SquareCheckBox}" Content="Seated Mode" Height="Auto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 10 10 10" Name="checkBoxSeatedMode" Checked="CheckBoxSeatedModeChanged" Unchecked="CheckBoxSeatedModeChanged"/>
-        <StatusBar Grid.Row="4" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
+
+
+        <CheckBox Grid.Row="5" Style="{StaticResource SquareCheckBox}" Content="Seated Mode" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,11,0,31" Name="checkBoxSeatedMode" Checked="CheckBoxSeatedModeChanged" Unchecked="CheckBoxSeatedModeChanged" Width="121"/>
+        <StatusBar Grid.Row="5" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}" Height="26">
             <StatusBarItem Padding="0 0 0 10">
                 <TextBlock Name="statusBarText" Margin="-1 0 0 0">Click 'Seated' to change skeletal pipeline type!</TextBlock>
             </StatusBarItem>
         </StatusBar>
-        <Button x:Name="BeginCalibration" Content="Begin Calibration" HorizontalAlignment="Left" Margin="734,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="25" ToolTip="Click here to begin initial calibration seqeunce. This will detect and place all Kinects relative to user position and prepare for 3D Scene Visualization" Focusable="False" FontSize="14" FontWeight="Bold" BorderThickness="1" Click="BeginCalibration_Click"/>
-        <StatusBar Name="faceDetectionStatus" HorizontalAlignment="Left" Height="26" Margin="740,257,0,0" Grid.Row="2" VerticalAlignment="Top" Width="132">
-            <StatusBarItem Padding="0 0 0 10">
-                <TextBlock Name="faceDetectionStatusText" Margin="-1 0 0 0" Height="16" Width="132" TextAlignment="Center" RenderTransformOrigin="0.647,0.545" FontWeight="Bold">NOT STARTED</TextBlock>
-            </StatusBarItem>
-        </StatusBar>
-        <Label Content="Face Detection" HorizontalAlignment="Left" Margin="740,239,0,0" Grid.Row="2" VerticalAlignment="Top" Width="132" Height="40"/>
+        <Button x:Name="BeginCalibration" Content="Begin Calibration" HorizontalAlignment="Left" Margin="740,0,0,0" Grid.Row="2" VerticalAlignment="Top" Width="130" Height="25" ToolTip="Click here to begin initial calibration seqeunce. This will detect and place all Kinects relative to user position and prepare for 3D Scene Visualization" Focusable="False" FontSize="14" FontWeight="Bold" BorderThickness="1" Click="BeginCalibration_Click"/>
+       
+        <TabControl HorizontalAlignment="Left" Height="320" VerticalAlignment="Top" Width="862" Grid.Row="4" TabStripPlacement="Bottom">
+            <TabItem Header="Kinect A" Width="100">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="23*"/>
+                        <ColumnDefinition Width="102*"/>
+                    </Grid.ColumnDefinitions>
+                    <Image x:Name="Video" Margin="231,8,104,10" Width="360" Height="270" Grid.Column="1"/>
+                    <Image x:Name="SkeletonCanvas" Margin="10,8,482,10"  Width="360" Height="270" Grid.ColumnSpan="2"/>
+                    <StatusBar x:Name="faceDetectionStatus" HorizontalAlignment="Left" Height="26" Margin="611,203,-48,0" VerticalAlignment="Top" Width="132" Grid.Column="1" RenderTransformOrigin="0.5,0.5">
+                        <StatusBar.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform Angle="-90"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </StatusBar.RenderTransform>
+                        <StatusBarItem Padding="0 0 0 10">
+                            <TextBlock x:Name="faceDetectionStatusText" Margin="-1 0 0 0" Height="16" Width="132" TextAlignment="Center" RenderTransformOrigin="0.647,0.545" FontWeight="Bold"><Run Text="NOT STARTED"/></TextBlock>
+                        </StatusBarItem>
+                    </StatusBar>
+                </Grid>
+            </TabItem>
+            <TabItem Header="TabItemsdasdaDSAdsadaDAS" Width="100">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
+        <Label Content="Individual Kinect Data Streams" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="3" Height="33" Width="275" FontWeight="Bold" FontSize="18" Margin="0,5,0,0" Grid.RowSpan="2"/>
+        <Label Content="Multi-Kinect System Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Height="33" Width="275" FontWeight="Bold" FontSize="18" Grid.RowSpan="2"/>
     </Grid>
 </Window>
